Fixes #6955: close icons not showing up on FF
git-svn-id: http://svn.dojotoolkit.org/src/dijit/trunk@13990 560b804f-0ae3-0310-86f3-f6aa0a117693

--- a/themes/tundra/layout/TabContainer_rtl.css
+++ b/themes/tundra/layout/TabContainer_rtl.css
@@ -17,8 +17,8 @@
 	padding: 0px 12px 0px 0px;
 }
 
-.dj_gecko .tundra .dijitTab .closeImage {
-	position:relative;
+.dj_gecko-rtl .tundra .dijitTab .closeImage {
+	position: absolute;
 	float:none;
 	padding:0;
 }
